# python-type-challenges

./: Dockerfile.txt  Makefile  README.MD  docker-compose.yml  pyproject.toml
.github/workflows/: type-check.yml
src/basic/: __init__.py  task_01_any_type.py  task_02_dict_string.py  task_03_final_list.py  task_04_kwargs_union.py  task_05_list_string.py  task_06_optional_int.py  task_07_int_argument.py  task_08_return_int.py  task_09_tuple_str_int.py  task_10_vector_type.py  task_11_union_str_int.py  task_12_int_annotation.py
src/python_type_challenges.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
