[project]
name = "python-type-challenges"
version = "0.1.0"
description = "Python type annotation challenges"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
#    "mypy>=1.13.0",
    "pyright>=1.1.389",
]

#[tool.mypy]
#python_version = "3.12"
#warn_return_any = true
#warn_unused_configs = true
#disallow_untyped_defs = true
#disallow_incomplete_defs = true
#check_untyped_defs = true
#disallow_untyped_decorators = true
#no_implicit_optional = true
#warn_redundant_casts = true
#warn_unused_ignores = true
#warn_no_return = true
#warn_unreachable = true
#strict_equality = true

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"